----------------------------------------------------------------
mirt 0.2.4
---------------------------------------------------------------

* fixed G^2 and loglikelihood in logLik() when product terms included

* bugfix in drawThetas when noncompensatory items used

---------------------------------------------------------------
mirt 0.2.3
---------------------------------------------------------------

* bugfixes for fscores, itemplot, and generic functions

* read.mirt() added for creating a suitable plink object

* mirt() and bfactor() can now accommodate polychotomous items using 
  an ordinal IRT scheme

* itemplot() now makes use of the handy plink package plots, giving a 
  good deal of flexibility. 

* Generic plot()'s now use lattice plots extensively

----------------------------------------------------------------
mirt 0.2.2
----------------------------------------------------------------

* Ported src code into Rcpp for future tweaking. 

----------------------------------------------------------------
mirt 0.2.1
----------------------------------------------------------------

* ML estimation of factor scores for mirt and bfactor

* RMSEA statistic added for all fitted models

* Nonlinear polynomial estimation specification for confmirt models, now
  with more consistent returned lables

----------------------------------------------------------------
mirt 0.2.0
----------------------------------------------------------------

* parameter standard errors added for mirt() (1 factor only) and bfactor() models

* bfactor() values that are ommited are recoded to NA in summary and coef 
  for better viewing

* 'technical' added for confmirt function, allowing for various tweeks and 
  varying beta prior weights

* product relations added for confmirt.model(). Specified by enclosing in brackets
  and using an asterik 

* documentation fixes with roxygenize  