@@ -123,7 +123,8 @@ P.mirt <- function(a, d, Theta, g)
 	return(traces)
 }
 
-P.comp <- function(a,d,thetas,c = 0){
+P.comp <- function(a,d,thetas,c = 0)
+{
 	nfact <- length(a)
 	P <- rep(1,nrow(thetas))
 	for(i in 1:nfact)
@@ -525,7 +526,8 @@ gamma.cor <- function(x)
 	gamma 
 } 
 
-betaprior <- function(a,b,g,W=20){
+betaprior <- function(a,b,g,W=20)
+{
 	a <- a + (1-g)*W
 	b <- b + g*W
 	grad <- ((a-1) * g^(a-1) * (1-g)^(b-1) - (b-1)*g^(a-1)*(1-g)^(b-1))/ 
@@ -930,7 +932,8 @@ model.elements <- function(model, factorNames, nfactNames, nfact, J, K, fulldata
   ret
 }
 
-sortPars <- function(pars, indlist, nfact, estGuess){
+sortPars <- function(pars, indlist, nfact, estGuess)
+{
 	lambdas <- matrix(pars[indlist$lamind],ncol=nfact,byrow=TRUE)	
 	J <- nrow(lambdas)		
 	zetas <- list()
@@ -942,7 +945,8 @@ sortPars <- function(pars, indlist, nfact, estGuess){
 	return(list(lambdas=lambdas, zetas=zetas, guess=guess))
 }
 
-sortParsConfmirt <- function(pars, indlist, nfact, estGuess, nfactNames){
+sortParsConfmirt <- function(pars, indlist, nfact, estGuess, nfactNames)
+{
 	J <- length(estGuess)
 	lambdas <- matrix(pars[indlist$lamind],J,nfactNames,byrow=TRUE)
 	zetas <- list()
@@ -958,7 +962,8 @@ sortParsConfmirt <- function(pars, indlist, nfact, estGuess, nfactNames){
 	return(list(lambdas=lambdas, zetas=zetas, guess=guess, mu=mu, sig=sig))
 }
 
-rateChange <- function(pars, lastpars1, lastpars2){
+rateChange <- function(pars, lastpars1, lastpars2)
+{
 	p <- unlist(pars)	
 	lp1 <- unlist(lastpars1)
 	lp2 <- unlist(lastpars2)
@@ -975,7 +980,8 @@ rateChange <- function(pars, lastpars1, lastpars2){
 	parsret
 }
 
-rebuildPars <- function(p, pars){
+rebuildPars <- function(p, pars)
+{
 	names(p) <- NULL
 	pars2 <- pars
 	pars2$lambdas <- matrix(p[1:length(pars$lambdas)], ncol=ncol(pars$lambdas), 
